--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.07.2022 08:15:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.07.2022 08:46:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -80,12 +80,12 @@
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Curry polévka s kuřecím masem; v menu <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Curry polévka s kuřecím masem; v menu <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Curry polévka s kuřecím masem; samostatně <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Curry polévka s kuřecím masem; samostatně <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">49 Kč</div>
 <div class="clear"></div>
 </li>
