Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.07.2022 08:46:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.07.2022 09:10:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Čtvrtek, 28. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka se zeleným kari a zeleninou</strong>
+<strong>Hrášková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Okouník nilský se šťouchaným bramborem s petrželkou a limetkovým dipem</strong>
+<strong>Smažený kuřecí špíz s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							143,-
 						</span>
 </p>
 <p>
-<strong>Špagety s bazalkovým pestem, kuřecím masem a parmazánem</strong>
+<strong>Zabijačkový prejt s kysaným zelím, hořčicí a vařeným bramborem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s marinovanou vepřovou panenkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>Quiche lorraine na ledovém salátku se zeleninou a dijonským dresinkem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							137,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: vepřové kolínko tandoori, pečené brambory s bylinkami, Tilapie s rajčaty a parmazánem, rýže, krémový květáček</strong>
+<strong>TEPLÝ BUFET: kuřecí prsa na červeném kari, Tilapie s rajčatovou omáčkou, pečené brambory s cibulkou, ryze, zelenina,</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: míchaná zelenina, zeleninový s kari dresinkem a balkánem</strong>
+<strong>SALÁTY: tzatziki, míchaná zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -137,7 +137,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s holandskou omackou s celozrnnou horcici, stouchane brambory s creme fraiche, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s creme fraiche, salatek z cervene repy 179</li><li>Thajske hovezi nudlicky s pecenymi palivymi paprikami, zelenymi bylinkami a arasidy, jasminova ryze, salatek 155</li><li>Pomalu dusena veprova licka ve sladke omacce se zazvorem a  korenim peti vuni, psenicne nudle s opekanym zelim, salatek 175</li><li> Indicke kvetakove kari se zazvorem, rajcaty, beluga cockou a jogurtem, jasminova ryze 155</li></ol>
+<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, pecene brambory, salatek 155</li><li>Peceny cerstvy platyz a filet z nilskeho okouna s omackou z pecenych paprik, pecene brambory, salatek 175</li><li>Wrap s veprovymi gyros nudlickami, rimskym salatem a rajcaty, korenena ryze, okurkove tzatziki, salatek {L} 155</li><li>Grilovana kruti jatra se svestkovou omackou, gratinovane brambory, salatek 175</li><li>Marocka cizrnova tagina s pecenou maslovou dyni, rajcaty a balkanskym syrem, kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
