Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.07.2022 08:16:07</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.07.2022 08:47:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 29.7.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Pavlova roláda s vanilkovým krémem a malinami  (bez lepku) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tvarohový závin s jablky a mandlemi </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Zapečené kuřecí prso s mozzarellou a rajčaty, smetanová omáčka, opečený brambor <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Asijský salát z rýžových nudlí, zelenina, zázvorový dresing, restované kešu ořechy <em title="Obiloviny obsahující lepek">1</em><em title="Sójové boby (sója)">6</em><em title="Skořápkové plody">8</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -92,7 +132,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, pecene brambory, salatek 155</li><li>Peceny cerstvy platyz a filet z nilskeho okouna s omackou z pecenych paprik, pecene brambory, salatek 175</li><li>Wrap s veprovymi gyros nudlickami, rimskym salatem a rajcaty, korenena ryze, okurkove tzatziki, salatek {L} 155</li><li>Grilovana kruti jatra se svestkovou omackou, gratinovane brambory, salatek 175</li><li>Marocka cizrnova tagina s pecenou maslovou dyni, rajcaty a balkanskym syrem, kuskus, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s kvetakovym kari, korenena ryze, salatek 155</li><li>Peceny filet z cerstve norske tresky s kvetakovym kari, korenena ryze, salatek 175</li><li>Pikantni jihoindicke kari s veprovym masem, cizrnou, pecenou dyni, zazvorem a chilli, jasminova ryze 155</li><li>Spagety s nudlickami hoveziho orechu, jalapenos, pecenymi cherry rajcaty a rimskym salatem {L} 175</li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, pecene brambory, tatarska omacka {L} 155</li></ol>
 </td>
 </tr>
 </table>
