Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.07.2022 08:47:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.07.2022 09:10:38</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pátek, 29. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrášková</strong>
+<strong>Písmenková se zeleninou a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený kuřecí špíz s hranolkami a tatarkou</strong>
+<strong>Znojemská Vepřová plec s těstovinou NEBO rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Zabijačkový prejt s kysaným zelím, hořčicí a vařeným bramborem</strong>
+<strong>Makové palačinky se švestkami a tvarohem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							115,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s marinovanou vepřovou panenkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: kuřecí prsa na červeném kari, Tilapie s rajčatovou omáčkou, pečené brambory s cibulkou, ryze, zelenina,</strong>
+<strong>TEPLÝ BUFET: anglicky Vepřový plátek, Tilapie se slaninou a pestem ze sušených rajčat, pečené brambory, rýže, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: tzatziki, míchaná zelenina</strong>
+<strong>SALÁTY: Caesar s kuřecím masem, michaná zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
