Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.08.2022 08:28:43</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.08.2022 09:01:31</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pondělí, 01. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Písmenková se zeleninou a kuřecím masem</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Znojemská Vepřová plec s těstovinou NEBO rýží</strong>
+<strong>Maďarský Vepřový guláš s houskovým knedlíkem NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Makové palačinky se švestkami a tvarohem</strong>
+<strong>Špagety bolognesse s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: anglicky Vepřový plátek, Tilapie se slaninou a pestem ze sušených rajčat, pečené brambory, rýže, zelenina</strong>
+<strong>TEPLÝ BUFET: Smetanově brambory, kuřecí prsa s rajčatovým pestem, Tilapie s paprikou a tymiánem, brokolice, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Caesar s kuřecím masem, michaná zelenina</strong>
+<strong>SALÁTY: rajčatový s vejcem a cibulkou, míchaná zelenina, těstovinový s kuřecím masem a pestem ze sušených rajčat</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -85,7 +85,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s kvetakovym kari, korenena ryze, salatek 155</li><li>Peceny filet z cerstve norske tresky s kvetakovym kari, korenena ryze, salatek 175</li><li>Pikantni jihoindicke kari s veprovym masem, cizrnou, pecenou dyni, zazvorem a chilli, jasminova ryze 155</li><li>Spagety s nudlickami hoveziho orechu, jalapenos, pecenymi cherry rajcaty a rimskym salatem {L} 175</li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, pecene brambory, tatarska omacka {L} 155</li></ol>
+<ol><li>Peceny atlanticky hejk s pecenymi rajcaty a petrzelkovym pestem, indicky dal ze zluteho hrachu se zeleninou, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka s pecenymi rajcaty a petrzelkovym pestem, indicky dal ze zluteho hrachu se zeleninou, salatek 179</li><li>Pad kra pao – thajske restovane veprove se zelenymi fazolkami, bazalkou, sazenym vejcem a chilli, jasminova ryze, salatek 155</li><li>Hovezi licka na Merlotu a korenove zelenine, pecene brambory, salatek 169</li><li>Ratatouille z letni pecene zeleniny, rajcaty a bazalkou s opekanym uzenym tofu, pecene brambory 155</li></ol>
 </td>
 </tr>
 </table>
