--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.08.2022 09:01:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.08.2022 09:41:46</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 1.8.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mango cheesecake </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Salát s tarhoňou a balkánským sýrem, rajče, paprika, rukola, pesto, dýňová semínka </div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z cukrového hrášku s mátou, v menu </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z cukrového hrášku s mátou, samostatně </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Sekaná pečeně s bramborovou kaší, okurkový relish <em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí quesadilla s bbq omáčkou, cheddar sýrem, přílohový caesar salát <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Krémový bulgur s restovanými houbami, rukolou a parmazánem <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s pecenymi rajcaty a petrzelkovym pestem, indicky dal ze zluteho hrachu se zeleninou, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka s pecenymi rajcaty a petrzelkovym pestem, indicky dal ze zluteho hrachu se zeleninou, salatek 179</li><li>Pad kra pao – thajske restovane veprove se zelenymi fazolkami, bazalkou, sazenym vejcem a chilli, jasminova ryze, salatek 155</li><li>Hovezi licka na Merlotu a korenove zelenine, pecene brambory, salatek 169</li><li>Ratatouille z letni pecene zeleniny, rajcaty a bazalkou s opekanym uzenym tofu, pecene brambory 155</li></ol>
+<ol><li>Peceny atlanticky hejk s pecenymi rajcaty a petrzelkovym pestem, pikantní indicky dal ze zluteho hrachu se zeleninou, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka s pecenymi rajcaty a petrzelkovym pestem, pikantní indicky dal ze zluteho hrachu se zeleninou, salatek 179</li><li>Pad kra pao – thajske restovane veprove se zelenymi fazolkami, bazalkou, sazenym vejcem a chilli, jasminova ryze, salatek 155</li><li>Hovezi licka na Merlotu a korenove zelenine, pecene brambory, salatek 169</li><li>Ratatouille z letni pecene zeleniny, rajcaty a bazalkou s opekanym uzenym tofu, pecene brambory 155</li></ol>
 </td>
 </tr>
 </table>
