--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.08.2022 10:15:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.08.2022 10:46:31</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -147,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z trebonskeho kapra {prorezavany – bez kosti} s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 179</li><li>Lasagne s hovezim a veprovym masem, rajcaty, cuketami a bazalkou zapecene ve smetanove omacce, salatek 155</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s kardamomem, pecene brambory, salatek 179</li><li>Burrito s pikantnim chilli z maslovych fazoli s palivymi slovenskymi paprikami, okurkove tzatziki, korenena ryze, salatek {L} 155 </li></ol>
+<ol><li>Peceny filet z trebonskeho kapra {prorezavany – bez kosti} s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 179</li><li>Lasagne s hovezim a veprovym masem, rajcaty, cuketami a bazalkou zapecene ve smetanove omacce, salatek (L) 155</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s kardamomem, pecene brambory, salatek 179</li><li>Burrito s pikantnim chilli z maslovych fazoli s palivymi slovenskymi paprikami, okurkove tzatziki, korenena ryze, salatek {L} 155 </li></ol>
 </td>
 </tr>
 </table>
