Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.08.2022 08:45:14</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.08.2022 09:11:15</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Středa, 03. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Krémová česnečka s kuřecím masem</strong>
+<strong>Cibulačka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Anglická Krůtí játra s pečeným bramborem a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							139,-
-						</span>
-</p>
-<p>
-<strong>Caesar salát s kuřecím masem a krutony</strong>
+<strong>Smažený Vepřový řízek s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							143,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie se slaninou a rajcaty, Vepřový plátek s houbami a šalvěji, batáty pečené, rýže, brokolice</strong>
+<strong>Špagety se salsiciou s kořenovou zeleninou a parmazánem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>Kuřecí tortilla s ledovým salátkem a rajčatovým dipem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie s rajcatem a slaninou, hovězí na česneku, zelenina, rýže, batáty</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: těstovinový s kuřecím masem a pestem ze sušených rajčat, čočkový s kari</strong>
+<strong>SALÁTY: Čočkový s rajčaty a kari, Míchaný s cesnekovym dipem, caesar</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -139,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z trebonskeho kapra {prorezavany – bez kosti} s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 179</li><li>Lasagne s hovezim a veprovym masem, rajcaty, cuketami a bazalkou zapecene ve smetanove omacce, salatek (L) 155</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s kardamomem, pecene brambory, salatek 179</li><li>Burrito s pikantnim chilli z maslovych fazoli s palivymi slovenskymi paprikami, okurkove tzatziki, korenena ryze, salatek {L} 155 </li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, sled, losos} se zelenymi bylinkami, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 155</li><li>Filet z cerstve norske tresky zapeceny s listovym spenatem a creme fraiche, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 155</li><li>Italske dynove rizoto s parmezanem a uzenymi koroptvimi prsicky, salatek 179</li><li>Indicka pakora {cizrnove smazenky} s pecenou maslovou dyni, cibulkou a panc phoron, jogurtovy dip, kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
